# 3d_graphics_editor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conan_profile  conanfile.txt
app/: CMakeLists.txt  main.cpp
app/editor/: editor.cpp  editor.h  editor_events.cpp  editor_gui.cpp  gizmo.cpp  gizmo.h  mode.cpp  mode.h
app/editor/network/: client.cpp  collaborator.cpp  host.cpp  network.h
app/menu/: menu.cpp  menu.h
app/test_stage/: test_stage.cpp  test_stage.h
app/test_stage1/: test_stage1.cpp  test_stage1.h
include/data/: gizmo.h  mesh.h  model.h  model_loader.h  primitives.h  shader.h  texture.h
include/events/: event.h  observer.h
include/events/propterties/: clickable.h  draggable.h  hoverable.h  scaleable.h  scrollable.h
include/gui/: base.h  button.h  buttons_list.h  elements_container.h  opengl_context.h  radio_button.h  select_rect.h  sprite_element.h  text.h
include/gui/elements/: base.h  button.h  buttons_list.h  sprite_element.h  text.h
include/gui/propteries/: clickable.h  draggable.h  drawable.h  hoverable.h  scaleable.h
include/math/: points_cast.h  ray.h  transform.h  triangulation.h  utils.h  vector2.h
include/network/: communication_socket.h  connection_socket.h  file_descriptor.h
include/render/: camera.h  gizmo.h  light.h  mesh.h  model.h  model_for_gizmo.h  renderer.h  shader.h  transform.h  vertex.h  vertex_array.h  vertex_buffer.h
include/render/opengl/: frame_buffer.h  picking_texture.h  vertex_array.h  vertex_layout.h
include/renderer/: mesh.h  renderer.h  vertex_array.h  vertex_buffer.h  vertex_layout.h
include/stage/: stage.h  stage_manager.h
include/utils/: active.h  alpaca_types.h  opengl_error.h  settings.h  shader.h  singleton.h  texture.h  tree.h  utils.h  uuid.h  vector2.h
network_lib/: CMakeLists.txt  server.cpp
network_lib/network/: communication_socket.h  connection_socket.h  network.h
network_lib/network/tcp_hole/: events.h
server/: CMakeLists.txt  client.cpp  events.h  server.cpp
shaders/: color.frag  color.vert  gizmo.frag  gizmo.vert  picking.frag  picking_empty.frag  point.frag  texture.frag  texture.vert  texture_shader.frag  texture_shader.vert
src/: CMakeLists.txt  main.cpp
src/events/: event.cpp  observer.cpp
src/events/propterties/: clickable.cpp  draggable.cpp  hoverable.cpp  scaleable.cpp  scrollable.cpp
src/gui/: base.cpp  button.cpp  button_list.cpp  elements_container.cpp  opengl_context.cpp  radio_button.cpp  sprite_element.cpp  text.cpp
src/gui/elements/: base.cpp  button.cpp  button_list.cpp  sprite_element.cpp  text.cpp
src/gui/propteries/: clickable.cpp  draggable.cpp  drawable.cpp  hoverable.cpp  scaleable.cpp
src/math/: model_transform.cpp  transform.cpp
src/network/: communication_socket.cpp  connection_socket.cpp
src/render/: camera.cpp  gizmo.cpp  light.cpp  mesh.cpp  model.cpp  renderer.cpp  transform.cpp  vertex_array.cpp  vertex_buffer.cpp
src/render/opengl/: frame_buffer.cpp  picking_texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/renderer/: mesh.cpp  renderer.cpp  vertex_array.cpp  vertex_buffer.cpp
src/stage/: stage.cpp  stage_manager.cpp
